# neuropilot

./: .cursorrules  .gitignore  Makefile  README.md  add_files.rb
NeuroPilotApp/NeuroPilot/NeuroPilot/: BluetoothManager.swift  ContentView.swift  DashboardViewModel.swift  Models.swift  NeuroPilotApp.swift  Pipeline.swift  RasterPlotView.swift  SpikePacket.swift  TCPTelemetryClient.swift  TelemetryClient.swift  TelemetryProtocol.swift
NeuroPilotApp/NeuroPilot/NeuroPilot.xcodeproj/: project.pbxproj
cloud/backend/: main.py
cloud/frontend/: app.js  index.html  style.css
datasets/: README.md
docs/: architecture.md  bci_glossary.md  industry_comparison.md  references.md  roadmap.md
n1_fusion/: Cargo.toml
n1_fusion/src/: lib.rs  main.rs
scripts/: autocommit.py
simulator/: main.py  neural_population.py
